src/objects/Lcm_TecSys__c.object
<CustomObject>
    <description>List of all technical Systems (Scheduled Jobs, Batches (incl. OnDemand), Interfaces</description>
    <fields>
        <fullName>Lcm_CheckedAt__c</fullName>
        <description>when was the system checked from owner</description>
        <inlineHelpText>when was the system checked from owner</inlineHelpText>
        <label>checked at</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lcm_CheckedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>who checked the system</description>
        <inlineHelpText>who checked the system</inlineHelpText>
        <label>checked by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>technical_Systems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lcm_CronApexClass__c</fullName>
        <externalId>true</externalId>
        <label>Cron ApexClass</label>
        <length>250</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Lcm_CronCreateCmd__c</fullName>
        <formula>IF( Text(Lcm_SystemType__c)=&apos;Schedule-Job&apos; ,
 &quot;System.schedule(&apos;&quot; &amp;   RIGHT(&apos;0&apos;&amp;TEXT(Lcm_CronHour__c),2) &amp; &apos;:&apos; &amp; RIGHT(&apos;0&apos; &amp; TEXT( Lcm_CronMinute__c),2) &amp; &apos; &apos; &amp;  Lcm_CronApexClass__c &amp; &apos; (&apos; &amp;  Lcm_CronRepeatLabel__c &amp; &quot;)&apos;, &apos;&quot;
&amp;  Lcm_CronTimer__c &amp; &quot;&apos;, new &quot; &amp; Lcm_CronApexClass__c &amp; &apos;());&apos;

, &apos;-&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cron Create Cmd</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lcm_CronDay__c</fullName>
        <description>Day in month, * for every day</description>
        <inlineHelpText>Day in month, * for every day</inlineHelpText>
        <label>Cron Day</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lcm_CronHour__c</fullName>
        <label>Cron Hour</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lcm_CronMinute__c</fullName>
        <label>Cron Minute</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lcm_CronRepeatLabel__c</fullName>
        <formula>IF( Lcm_CronDay__c=&apos;*&apos;, &apos;täglich&apos;, &apos;&apos;) &amp;
IF( Lcm_CronWeekday__c !=&apos;?&apos;, Lcm_CronWeekday__c, &apos;&apos;) &amp;
IF( ISNUMBER(Lcm_CronDay__c), &apos;am &apos;&amp; Lcm_CronDay__c &amp; &apos;.&apos;, &apos;&apos;)</formula>
        <label>Cron Repeat Label</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lcm_CronTimeReadable__c</fullName>
        <description>Readable Time (hh:mm)</description>
        <formula>IF(  ISNULL(Lcm_CronHour__c) ,
  &apos;&apos;,
  RIGHT(&apos;0&apos;&amp;TEXT(Lcm_CronHour__c),2) &amp; &apos;:&apos; &amp; RIGHT(&apos;0&apos; &amp; TEXT( Lcm_CronMinute__c),2)
)</formula>
        <inlineHelpText>Readable Time (hh:mm)</inlineHelpText>
        <label>Cron Time Readable</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lcm_CronTimer__c</fullName>
        <formula>&apos;0 &apos;
&amp; TEXT(Lcm_CronMinute__c) &amp; &apos; &apos;
&amp; TEXT(Lcm_CronHour__c) &amp; &apos; &apos; 
&amp; Lcm_CronDay__c 
&amp; &apos; * &apos; 
&amp;  Lcm_CronWeekday__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cron Timer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lcm_CronWeekday__c</fullName>
        <label>Cron Weekday</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lcm_Description__c</fullName>
        <label>Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lcm_Documentation__c</fullName>
        <description>short documenation or hint, where to find doku</description>
        <inlineHelpText>short documenation or hint, where to find doku</inlineHelpText>
        <label>Documentation</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lcm_Facade__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Schnittstelle für Facade-Server geeignet/geplant</description>
        <inlineHelpText>Schnittstelle für Facade-Server geeignet/geplant</inlineHelpText>
        <label>Facade geeignet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lcm_Hosting__c</fullName>
        <description>where is the hosting of a interface, which type of hosting</description>
        <inlineHelpText>where is the hosting of a interface, which type of hosting</inlineHelpText>
        <label>Hosting</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lcm_InterfaceProtocols__c</fullName>
        <description>communication protocols used</description>
        <inlineHelpText>communication protocols used</inlineHelpText>
        <label>interface protocols</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Bulk-API</fullName>
                </value>
                <value>
                    <fullName>E-Mail</fullName>
                </value>
                <value>
                    <fullName>http(s)</fullName>
                </value>
                <value>
                    <fullName>Rest</fullName>
                </value>
                <value>
                    <fullName>SOAP</fullName>
                </value>
                <value>
                    <fullName>SQL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lcm_LifeCycleState__c</fullName>
        <label>LifeCycle-State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>live</fullName>
                </value>
                <value>
                    <fullName>deactivated</fullName>
                </value>
                <value>
                    <fullName>planned</fullName>
                </value>
                <value>
                    <fullName>deleted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lcm_Priority__c</fullName>
        <label>Priority</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lcm_Requirement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requirement</label>
        <referenceTo>Lcm_Requirement__c</referenceTo>
        <relationshipLabel>technical Systems</relationshipLabel>
        <relationshipName>technical_System</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lcm_SfMetadata__c</fullName>
        <description>Metadata elements used. User, PermissionSet, ApexClasses, .....</description>
        <inlineHelpText>Metadata elements used. User, PermissionSet, ApexClasses, .....</inlineHelpText>
        <label>SF Metadata</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lcm_SolutionOwnerExt__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Solution-Owner des externen Systems (bei Schnittstellen)</description>
        <inlineHelpText>Solution-Owner des externen Systems (bei Schnittstellen)</inlineHelpText>
        <label>Solution-Owner extern</label>
        <referenceTo>P7S1_Emp__c</referenceTo>
        <relationshipLabel>technical Systems (Solution-Owner extern)</relationshipLabel>
        <relationshipName>technical_Systems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lcm_SolutionOwnerSf__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Solution-Owner Salesforce</label>
        <referenceTo>P7S1_Emp__c</referenceTo>
        <relationshipLabel>technical System</relationshipLabel>
        <relationshipName>technical_System</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lcm_SystemType__c</fullName>
        <label>System-Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Schedule-Job</fullName>
                </value>
                <value>
                    <fullName>Interface</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lcm_Systemname__c</fullName>
        <label>Systemname</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lcm_TechnicalOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>technical Owner</label>
        <referenceTo>P7S1_Emp__c</referenceTo>
        <relationshipLabel>technical System (technical Owner)</relationshipLabel>
        <relationshipName>technical_System1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lcm_Technology__c</fullName>
        <description>which technology is used for interface</description>
        <inlineHelpText>which technology is used for interface</inlineHelpText>
        <label>technology</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>technical System</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Lcm_SystemType__c</columns>
        <columns>Lcm_LifeCycleState__c</columns>
        <columns>Lcm_Systemname__c</columns>
        <columns>Lcm_Description__c</columns>
        <columns>Lcm_Priority__c</columns>
        <columns>Lcm_Requirement__c</columns>
        <columns>Lcm_SolutionOwnerSf__c</columns>
        <columns>Lcm_TechnicalOwner__c</columns>
        <filterScope>Everything</filterScope>
        <label>Alle</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>Interfaces</fullName>
        <columns>NAME</columns>
        <columns>Lcm_LifeCycleState__c</columns>
        <columns>Lcm_Systemname__c</columns>
        <columns>Lcm_Description__c</columns>
        <columns>Lcm_Hosting__c</columns>
        <columns>Lcm_Facade__c</columns>
        <columns>Lcm_TechnicalOwner__c</columns>
        <columns>Lcm_SolutionOwnerExt__c</columns>
        <columns>Lcm_SolutionOwnerSf__c</columns>
        <columns>Lcm_SfMetadata__c</columns>
        <columns>Lcm_InterfaceProtocols__c</columns>
        <columns>Lcm_Technology__c</columns>
        <columns>Lcm_Priority__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Lcm_SystemType__c</field>
            <operation>equals</operation>
            <value>Interface</value>
        </filters>
        <label>Interfaces</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>Scheduled_Batches</fullName>
        <columns>NAME</columns>
        <columns>Lcm_LifeCycleState__c</columns>
        <columns>Lcm_Systemname__c</columns>
        <columns>Lcm_Description__c</columns>
        <columns>Lcm_Priority__c</columns>
        <columns>Lcm_Requirement__c</columns>
        <columns>Lcm_SolutionOwnerSf__c</columns>
        <columns>Lcm_TechnicalOwner__c</columns>
        <columns>Lcm_CronApexClass__c</columns>
        <columns>Lcm_CronTimeReadable__c</columns>
        <columns>Lcm_CronRepeatLabel__c</columns>
        <columns>Lcm_CronWeekday__c</columns>
        <columns>Lcm_CronDay__c</columns>
        <columns>Lcm_CheckedAt__c</columns>
        <columns>Lcm_CheckedBy__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Lcm_SystemType__c</field>
            <operation>equals</operation>
            <value>Schedule-Job</value>
        </filters>
        <label>Scheduled/Batches</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>to_be_checked</fullName>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <columns>NAME</columns>
        <columns>Lcm_LifeCycleState__c</columns>
        <columns>Lcm_Systemname__c</columns>
        <columns>Lcm_Description__c</columns>
        <columns>Lcm_Priority__c</columns>
        <columns>Lcm_SolutionOwnerSf__c</columns>
        <columns>Lcm_TechnicalOwner__c</columns>
        <columns>Lcm_CheckedAt__c</columns>
        <columns>Lcm_CheckedBy__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Lcm_LifeCycleState__c</field>
            <operation>equals</operation>
            <value>live</value>
        </filters>
        <filters>
            <field>Lcm_CheckedAt__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Lcm_CheckedAt__c</field>
            <operation>lessThan</operation>
            <value>LAST_N_DAYS:180</value>
        </filters>
        <label>to be checked</label>
        <language>de</language>
    </listViews>
    <nameField>
        <displayFormat>SY-{0000}</displayFormat>
        <label>System-Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>technical Systems</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>